<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:clipToPadding="false">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/icone_shape"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSearch"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/icone_shape"
        android:src="@drawable/baseline_remove_red_eye_24"
        app:layout_constraintEnd_toStartOf="@+id/btnsave"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnsave"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/icone_shape"
        android:src="@drawable/baseline_save_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"

        android:backgroundTint="@color/primaryColor"
        android:fontFamily="@font/nunito"
        android:hint="@string/title"
        android:inputType="text"
        android:maxLength="20"
        android:textColorHint="@color/textColor"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/btnsave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_semibold"
        android:textColor="@color/textColor"
        android:textSize="20sp"

        app:layout_constraintStart_toStartOf="@+id/edtTitle"
        app:layout_constraintTop_toBottomOf="@+id/edtTitle"
        tools:text="20/8/2023" />



    <ImageView
        android:id="@+id/imageNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDate" />

            <ImageView
                android:id="@+id/imageRemoveImage"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="13dp"

                android:background="@drawable/background_delete"
                android:contentDescription="@string/app_name"
                android:padding="5dp"
                android:src="@drawable/baseline_delete_24"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/edtText"
                app:layout_constraintEnd_toEndOf="@id/imageNote"
                app:layout_constraintTop_toTopOf="@id/imageNote"
                app:tint="@color/textColor" />


            <EditText
                android:id="@+id/edtText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                android:hint="@string/type_something"
                android:textColor="@color/textColor"
                android:importantForAutofill="no"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:textColorHint="@color/textColorHint"
                android:fontFamily="@font/nunito"
                android:backgroundTint="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageNote" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:background="@color/shape_btn_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <FrameLayout
                android:id="@+id/framePurple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp">
                <View
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/shape_yellow"
                    />

                <ImageView
                    android:id="@+id/imgPurple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/round_done_24"
                    android:layout_gravity="center"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/framePink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/shape_pink"
                    />

                <ImageView
                    android:id="@+id/imgPink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp">
                <View
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/shape_blue"
                    />

                <ImageView
                    android:id="@+id/imgBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />
            </FrameLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/baseline_image_24"
                app:tint="@color/white"
                android:backgroundTint="@color/shape_btn_color"
                />
        </FrameLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>